yufan/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMBER
    PACKED

Grammar

Rule 0     S' -> program
Rule 1     program -> program_head routine DOT
Rule 2     program_head -> PROGRAM NAME SEMI
Rule 3     routine -> routine_head routine_body
Rule 4     sub_routine -> routine_head routine_body
Rule 5     routine_head -> label_part const_part type_part var_part routine_part
Rule 6     label_part -> empty
Rule 7     const_part -> CONST const_expr_list
Rule 8     const_part -> empty
Rule 9     const_expr_list -> const_expr_list const_expr
Rule 10    const_expr_list -> const_expr
Rule 11    const_expr -> NAME EQUAL const_value SEMI
Rule 12    const_value -> INTEGER
Rule 13    const_value -> REAL
Rule 14    const_value -> CHAR
Rule 15    const_value -> STRING
Rule 16    const_value -> SYS_CON
Rule 17    const_value -> true
Rule 18    const_value -> false
Rule 19    type_part -> TYPE type_decl_list
Rule 20    type_part -> empty
Rule 21    type_decl_list -> type_decl_list type_definition
Rule 22    type_decl_list -> type_definition
Rule 23    type_definition -> NAME EQUAL type_decl SEMI
Rule 24    type_decl -> simple_type_decl
Rule 25    type_decl -> array_type_decl
Rule 26    type_decl -> record_type_decl
Rule 27    simple_type_decl -> SYS_TYPE
Rule 28    simple_type_decl -> NAME
Rule 29    simple_type_decl -> LP name_list RP
Rule 30    simple_type_decl -> const_value DOTDOT const_value
Rule 31    array_type_decl -> ARRAY LB simple_type_decl RB OF type_decl
Rule 32    record_type_decl -> RECORD field_decl_list END
Rule 33    field_decl_list -> field_decl_list field_decl
Rule 34    field_decl_list -> field_decl
Rule 35    field_decl -> name_list COLON type_decl SEMI
Rule 36    name_list -> name_list COMMA NAME
Rule 37    name_list -> NAME
Rule 38    var_part -> VAR var_decl_list
Rule 39    var_part -> empty
Rule 40    var_decl_list -> var_decl_list var_decl
Rule 41    var_decl_list -> var_decl
Rule 42    var_decl -> name_list COLON type_decl SEMI
Rule 43    routine_part -> routine_part function_decl
Rule 44    routine_part -> routine_part procedure_decl
Rule 45    routine_part -> function_decl
Rule 46    routine_part -> procedure_decl
Rule 47    routine_part -> empty
Rule 48    function_decl -> function_head SEMI sub_routine SEMI
Rule 49    function_head -> FUNCTION NAME parameters COLON simple_type_decl
Rule 50    procedure_decl -> procedure_head SEMI sub_routine SEMI
Rule 51    procedure_head -> PROCEDURE NAME parameters
Rule 52    parameters -> LP para_decl_list RP
Rule 53    parameters -> empty
Rule 54    para_decl_list -> para_decl_list SEMI para_type_list
Rule 55    para_decl_list -> para_type_list
Rule 56    para_type_list -> var_para_list COLON simple_type_decl
Rule 57    para_type_list -> val_para_list COLON simple_type_decl
Rule 58    var_para_list -> VAR name_list
Rule 59    val_para_list -> name_list
Rule 60    routine_body -> compound_stmt
Rule 61    compound_stmt -> BEGIN stmt_list END
Rule 62    stmt_list -> stmt_list stmt SEMI
Rule 63    stmt_list -> empty
Rule 64    stmt -> INTEGER COLON non_label_stmt
Rule 65    stmt -> non_label_stmt
Rule 66    non_label_stmt -> assign_stmt
Rule 67    non_label_stmt -> proc_stmt
Rule 68    non_label_stmt -> compound_stmt
Rule 69    non_label_stmt -> if_stmt
Rule 70    non_label_stmt -> repeat_stmt
Rule 71    non_label_stmt -> while_stmt
Rule 72    non_label_stmt -> for_stmt
Rule 73    non_label_stmt -> case_stmt
Rule 74    non_label_stmt -> goto_stmt
Rule 75    assign_stmt -> NAME ASSIGN expression
Rule 76    proc_stmt -> NAME
Rule 77    proc_stmt -> NAME LP args_list RP
Rule 78    proc_stmt -> SYS_PROC
Rule 79    proc_stmt -> SYS_PROC LP expression_list RP
Rule 80    proc_stmt -> READ LP factor RP
Rule 81    if_stmt -> IF expression THEN stmt else_clause
Rule 82    else_clause -> ELSE stmt
Rule 83    else_clause -> empty
Rule 84    repeat_stmt -> REPEAT stmt_list UNTIL expression
Rule 85    while_stmt -> WHILE expression DO stmt
Rule 86    for_stmt -> FOR NAME ASSIGN expression direction expression DO stmt
Rule 87    direction -> TO
Rule 88    direction -> DOWNTO
Rule 89    case_stmt -> CASE expression OF case_expr_list END
Rule 90    case_expr_list -> case_expr_list case_expr
Rule 91    case_expr_list -> case_expr
Rule 92    case_expr -> const_value COLON stmt SEMI
Rule 93    case_expr -> ID COLON stmt SEMI
Rule 94    goto_stmt -> GOTO INTEGER
Rule 95    expression_list -> expression_list COMMA expression
Rule 96    expression_list -> expression
Rule 97    expression -> expression GE expr
Rule 98    expression -> expression GT expr
Rule 99    expression -> expression LE expr
Rule 100   expression -> expression LT expr
Rule 101   expression -> expression EQUAL expr
Rule 102   expression -> expression UNEQUAL expr
Rule 103   expression -> expr
Rule 104   expr -> expr PLUS term
Rule 105   expr -> expr MINUS term
Rule 106   expr -> expr OR term
Rule 107   expr -> term
Rule 108   term -> term MUL factor
Rule 109   term -> term DIV factor
Rule 110   term -> term MOD factor
Rule 111   term -> term AND factor
Rule 112   term -> factor
Rule 113   factor -> SYS_FUNCT
Rule 114   factor -> SYS_FUNCT LP args_list RP
Rule 115   factor -> NAME LP args_list RP
Rule 116   factor -> NAME
Rule 117   factor -> const_value
Rule 118   factor -> LP expression RP
Rule 119   factor -> NOT factor
Rule 120   factor -> MINUS factor
Rule 121   factor -> NAME LB expression RB
Rule 122   factor -> NAME DOT NAME
Rule 123   args_list -> args_list COMMA expression
Rule 124   args_list -> expression
Rule 125   empty -> <empty>

Terminals, with rules where they appear

AND                  : 111
ARRAY                : 31
ASSIGN               : 75 86
BEGIN                : 61
CASE                 : 89
CHAR                 : 14
COLON                : 35 42 49 56 57 64 92 93
COMMA                : 36 95 123
CONST                : 7
DIV                  : 109
DO                   : 85 86
DOT                  : 1 122
DOTDOT               : 30
DOWNTO               : 88
ELSE                 : 82
END                  : 32 61 89
EQUAL                : 11 23 101
FOR                  : 86
FUNCTION             : 49
GE                   : 97
GOTO                 : 94
GT                   : 98
ID                   : 93
IF                   : 81
INTEGER              : 12 64 94
LB                   : 31 121
LE                   : 99
LP                   : 29 52 77 79 80 114 115 118
LT                   : 100
MINUS                : 105 120
MOD                  : 110
MUL                  : 108
NAME                 : 2 11 23 28 36 37 49 51 75 76 77 86 115 116 121 122 122
NOT                  : 119
NUMBER               : 
OF                   : 31 89
OR                   : 106
PACKED               : 
PLUS                 : 104
PROCEDURE            : 51
PROGRAM              : 2
RB                   : 31 121
READ                 : 80
REAL                 : 13
RECORD               : 32
REPEAT               : 84
RP                   : 29 52 77 79 80 114 115 118
SEMI                 : 2 11 23 35 42 48 48 50 50 54 62 92 93
STRING               : 15
SYS_CON              : 16
SYS_FUNCT            : 113 114
SYS_PROC             : 78 79
SYS_TYPE             : 27
THEN                 : 81
TO                   : 87
TYPE                 : 19
UNEQUAL              : 102
UNTIL                : 84
VAR                  : 38 58
WHILE                : 85
error                : 
false                : 18
true                 : 17

Nonterminals, with rules where they appear

args_list            : 77 114 115 123
array_type_decl      : 25
assign_stmt          : 66
case_expr            : 90 91
case_expr_list       : 89 90
case_stmt            : 73
compound_stmt        : 60 68
const_expr           : 9 10
const_expr_list      : 7 9
const_part           : 5
const_value          : 11 30 30 92 117
direction            : 86
else_clause          : 81
empty                : 6 8 20 39 47 53 63 83
expr                 : 97 98 99 100 101 102 103 104 105 106
expression           : 75 81 84 85 86 86 89 95 96 97 98 99 100 101 102 118 121 123 124
expression_list      : 79 95
factor               : 80 108 109 110 111 112 119 120
field_decl           : 33 34
field_decl_list      : 32 33
for_stmt             : 72
function_decl        : 43 45
function_head        : 48
goto_stmt            : 74
if_stmt              : 69
label_part           : 5
name_list            : 29 35 36 42 58 59
non_label_stmt       : 64 65
para_decl_list       : 52 54
para_type_list       : 54 55
parameters           : 49 51
proc_stmt            : 67
procedure_decl       : 44 46
procedure_head       : 50
program              : 0
program_head         : 1
record_type_decl     : 26
repeat_stmt          : 70
routine              : 1
routine_body         : 3 4
routine_head         : 3 4
routine_part         : 5 43 44
simple_type_decl     : 24 31 49 56 57
stmt                 : 62 81 82 85 86 92 93
stmt_list            : 61 62 84
sub_routine          : 48 50
term                 : 104 105 106 107 108 109 110 111
type_decl            : 23 31 35 42
type_decl_list       : 19 21
type_definition      : 21 22
type_part            : 5
val_para_list        : 57
var_decl             : 40 41
var_decl_list        : 38 40
var_para_list        : 56
var_part             : 5
while_stmt           : 71

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_head routine DOT
    (2) program_head -> . PROGRAM NAME SEMI

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_head                   shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_head . routine DOT
    (3) routine -> . routine_head routine_body
    (5) routine_head -> . label_part const_part type_part var_part routine_part
    (6) label_part -> . empty
    (125) empty -> .

    CONST           reduce using rule 125 (empty -> .)
    TYPE            reduce using rule 125 (empty -> .)
    VAR             reduce using rule 125 (empty -> .)
    FUNCTION        reduce using rule 125 (empty -> .)
    PROCEDURE       reduce using rule 125 (empty -> .)
    BEGIN           reduce using rule 125 (empty -> .)

    routine                        shift and go to state 4
    routine_head                   shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 7

state 3

    (2) program_head -> PROGRAM . NAME SEMI

    NAME            shift and go to state 8


state 4

    (1) program -> program_head routine . DOT

    DOT             shift and go to state 9


state 5

    (3) routine -> routine_head . routine_body
    (60) routine_body -> . compound_stmt
    (61) compound_stmt -> . BEGIN stmt_list END

    BEGIN           shift and go to state 12

    routine_body                   shift and go to state 10
    compound_stmt                  shift and go to state 11

state 6

    (5) routine_head -> label_part . const_part type_part var_part routine_part
    (7) const_part -> . CONST const_expr_list
    (8) const_part -> . empty
    (125) empty -> .

    CONST           shift and go to state 14
    TYPE            reduce using rule 125 (empty -> .)
    VAR             reduce using rule 125 (empty -> .)
    FUNCTION        reduce using rule 125 (empty -> .)
    PROCEDURE       reduce using rule 125 (empty -> .)
    BEGIN           reduce using rule 125 (empty -> .)

    const_part                     shift and go to state 13
    empty                          shift and go to state 15

state 7

    (6) label_part -> empty .

    CONST           reduce using rule 6 (label_part -> empty .)
    TYPE            reduce using rule 6 (label_part -> empty .)
    VAR             reduce using rule 6 (label_part -> empty .)
    FUNCTION        reduce using rule 6 (label_part -> empty .)
    PROCEDURE       reduce using rule 6 (label_part -> empty .)
    BEGIN           reduce using rule 6 (label_part -> empty .)


state 8

    (2) program_head -> PROGRAM NAME . SEMI

    SEMI            shift and go to state 16


state 9

    (1) program -> program_head routine DOT .

    $end            reduce using rule 1 (program -> program_head routine DOT .)


state 10

    (3) routine -> routine_head routine_body .

    DOT             reduce using rule 3 (routine -> routine_head routine_body .)


state 11

    (60) routine_body -> compound_stmt .

    DOT             reduce using rule 60 (routine_body -> compound_stmt .)
    SEMI            reduce using rule 60 (routine_body -> compound_stmt .)


state 12

    (61) compound_stmt -> BEGIN . stmt_list END
    (62) stmt_list -> . stmt_list stmt SEMI
    (63) stmt_list -> . empty
    (125) empty -> .

    END             reduce using rule 125 (empty -> .)
    INTEGER         reduce using rule 125 (empty -> .)
    NAME            reduce using rule 125 (empty -> .)
    SYS_PROC        reduce using rule 125 (empty -> .)
    READ            reduce using rule 125 (empty -> .)
    BEGIN           reduce using rule 125 (empty -> .)
    IF              reduce using rule 125 (empty -> .)
    REPEAT          reduce using rule 125 (empty -> .)
    WHILE           reduce using rule 125 (empty -> .)
    FOR             reduce using rule 125 (empty -> .)
    CASE            reduce using rule 125 (empty -> .)
    GOTO            reduce using rule 125 (empty -> .)

    stmt_list                      shift and go to state 17
    empty                          shift and go to state 18

state 13

    (5) routine_head -> label_part const_part . type_part var_part routine_part
    (19) type_part -> . TYPE type_decl_list
    (20) type_part -> . empty
    (125) empty -> .

    TYPE            shift and go to state 20
    VAR             reduce using rule 125 (empty -> .)
    FUNCTION        reduce using rule 125 (empty -> .)
    PROCEDURE       reduce using rule 125 (empty -> .)
    BEGIN           reduce using rule 125 (empty -> .)

    type_part                      shift and go to state 19
    empty                          shift and go to state 21

state 14

    (7) const_part -> CONST . const_expr_list
    (9) const_expr_list -> . const_expr_list const_expr
    (10) const_expr_list -> . const_expr
    (11) const_expr -> . NAME EQUAL const_value SEMI

    NAME            shift and go to state 24

    const_expr_list                shift and go to state 22
    const_expr                     shift and go to state 23

state 15

    (8) const_part -> empty .

    TYPE            reduce using rule 8 (const_part -> empty .)
    VAR             reduce using rule 8 (const_part -> empty .)
    FUNCTION        reduce using rule 8 (const_part -> empty .)
    PROCEDURE       reduce using rule 8 (const_part -> empty .)
    BEGIN           reduce using rule 8 (const_part -> empty .)


state 16

    (2) program_head -> PROGRAM NAME SEMI .

    BEGIN           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    CONST           reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    TYPE            reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    VAR             reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    FUNCTION        reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)
    PROCEDURE       reduce using rule 2 (program_head -> PROGRAM NAME SEMI .)


state 17

    (61) compound_stmt -> BEGIN stmt_list . END
    (62) stmt_list -> stmt_list . stmt SEMI
    (64) stmt -> . INTEGER COLON non_label_stmt
    (65) stmt -> . non_label_stmt
    (66) non_label_stmt -> . assign_stmt
    (67) non_label_stmt -> . proc_stmt
    (68) non_label_stmt -> . compound_stmt
    (69) non_label_stmt -> . if_stmt
    (70) non_label_stmt -> . repeat_stmt
    (71) non_label_stmt -> . while_stmt
    (72) non_label_stmt -> . for_stmt
    (73) non_label_stmt -> . case_stmt
    (74) non_label_stmt -> . goto_stmt
    (75) assign_stmt -> . NAME ASSIGN expression
    (76) proc_stmt -> . NAME
    (77) proc_stmt -> . NAME LP args_list RP
    (78) proc_stmt -> . SYS_PROC
    (79) proc_stmt -> . SYS_PROC LP expression_list RP
    (80) proc_stmt -> . READ LP factor RP
    (61) compound_stmt -> . BEGIN stmt_list END
    (81) if_stmt -> . IF expression THEN stmt else_clause
    (84) repeat_stmt -> . REPEAT stmt_list UNTIL expression
    (85) while_stmt -> . WHILE expression DO stmt
    (86) for_stmt -> . FOR NAME ASSIGN expression direction expression DO stmt
    (89) case_stmt -> . CASE expression OF case_expr_list END
    (94) goto_stmt -> . GOTO INTEGER

    END             shift and go to state 25
    INTEGER         shift and go to state 27
    NAME            shift and go to state 38
    SYS_PROC        shift and go to state 39
    READ            shift and go to state 40
    BEGIN           shift and go to state 12
    IF              shift and go to state 41
    REPEAT          shift and go to state 42
    WHILE           shift and go to state 43
    FOR             shift and go to state 44
    CASE            shift and go to state 45
    GOTO            shift and go to state 46

    stmt                           shift and go to state 26
    non_label_stmt                 shift and go to state 28
    assign_stmt                    shift and go to state 29
    proc_stmt                      shift and go to state 30
    compound_stmt                  shift and go to state 31
    if_stmt                        shift and go to state 32
    repeat_stmt                    shift and go to state 33
    while_stmt                     shift and go to state 34
    for_stmt                       shift and go to state 35
    case_stmt                      shift and go to state 36
    goto_stmt                      shift and go to state 37

state 18

    (63) stmt_list -> empty .

    END             reduce using rule 63 (stmt_list -> empty .)
    INTEGER         reduce using rule 63 (stmt_list -> empty .)
    NAME            reduce using rule 63 (stmt_list -> empty .)
    SYS_PROC        reduce using rule 63 (stmt_list -> empty .)
    READ            reduce using rule 63 (stmt_list -> empty .)
    BEGIN           reduce using rule 63 (stmt_list -> empty .)
    IF              reduce using rule 63 (stmt_list -> empty .)
    REPEAT          reduce using rule 63 (stmt_list -> empty .)
    WHILE           reduce using rule 63 (stmt_list -> empty .)
    FOR             reduce using rule 63 (stmt_list -> empty .)
    CASE            reduce using rule 63 (stmt_list -> empty .)
    GOTO            reduce using rule 63 (stmt_list -> empty .)
    UNTIL           reduce using rule 63 (stmt_list -> empty .)


state 19

    (5) routine_head -> label_part const_part type_part . var_part routine_part
    (38) var_part -> . VAR var_decl_list
    (39) var_part -> . empty
    (125) empty -> .

    VAR             shift and go to state 48
    FUNCTION        reduce using rule 125 (empty -> .)
    PROCEDURE       reduce using rule 125 (empty -> .)
    BEGIN           reduce using rule 125 (empty -> .)

    var_part                       shift and go to state 47
    empty                          shift and go to state 49

state 20

    (19) type_part -> TYPE . type_decl_list
    (21) type_decl_list -> . type_decl_list type_definition
    (22) type_decl_list -> . type_definition
    (23) type_definition -> . NAME EQUAL type_decl SEMI

    NAME            shift and go to state 52

    type_decl_list                 shift and go to state 50
    type_definition                shift and go to state 51

state 21

    (20) type_part -> empty .

    VAR             reduce using rule 20 (type_part -> empty .)
    FUNCTION        reduce using rule 20 (type_part -> empty .)
    PROCEDURE       reduce using rule 20 (type_part -> empty .)
    BEGIN           reduce using rule 20 (type_part -> empty .)


state 22

    (7) const_part -> CONST const_expr_list .
    (9) const_expr_list -> const_expr_list . const_expr
    (11) const_expr -> . NAME EQUAL const_value SEMI

    TYPE            reduce using rule 7 (const_part -> CONST const_expr_list .)
    VAR             reduce using rule 7 (const_part -> CONST const_expr_list .)
    FUNCTION        reduce using rule 7 (const_part -> CONST const_expr_list .)
    PROCEDURE       reduce using rule 7 (const_part -> CONST const_expr_list .)
    BEGIN           reduce using rule 7 (const_part -> CONST const_expr_list .)
    NAME            shift and go to state 24

    const_expr                     shift and go to state 53

state 23

    (10) const_expr_list -> const_expr .

    NAME            reduce using rule 10 (const_expr_list -> const_expr .)
    TYPE            reduce using rule 10 (const_expr_list -> const_expr .)
    VAR             reduce using rule 10 (const_expr_list -> const_expr .)
    FUNCTION        reduce using rule 10 (const_expr_list -> const_expr .)
    PROCEDURE       reduce using rule 10 (const_expr_list -> const_expr .)
    BEGIN           reduce using rule 10 (const_expr_list -> const_expr .)


state 24

    (11) const_expr -> NAME . EQUAL const_value SEMI

    EQUAL           shift and go to state 54


state 25

    (61) compound_stmt -> BEGIN stmt_list END .

    DOT             reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)
    SEMI            reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)
    ELSE            reduce using rule 61 (compound_stmt -> BEGIN stmt_list END .)


state 26

    (62) stmt_list -> stmt_list stmt . SEMI

    SEMI            shift and go to state 55


state 27

    (64) stmt -> INTEGER . COLON non_label_stmt

    COLON           shift and go to state 56


state 28

    (65) stmt -> non_label_stmt .

    SEMI            reduce using rule 65 (stmt -> non_label_stmt .)
    ELSE            reduce using rule 65 (stmt -> non_label_stmt .)


state 29

    (66) non_label_stmt -> assign_stmt .

    SEMI            reduce using rule 66 (non_label_stmt -> assign_stmt .)
    ELSE            reduce using rule 66 (non_label_stmt -> assign_stmt .)


state 30

    (67) non_label_stmt -> proc_stmt .

    SEMI            reduce using rule 67 (non_label_stmt -> proc_stmt .)
    ELSE            reduce using rule 67 (non_label_stmt -> proc_stmt .)


state 31

    (68) non_label_stmt -> compound_stmt .

    SEMI            reduce using rule 68 (non_label_stmt -> compound_stmt .)
    ELSE            reduce using rule 68 (non_label_stmt -> compound_stmt .)


state 32

    (69) non_label_stmt -> if_stmt .

    SEMI            reduce using rule 69 (non_label_stmt -> if_stmt .)
    ELSE            reduce using rule 69 (non_label_stmt -> if_stmt .)


state 33

    (70) non_label_stmt -> repeat_stmt .

    SEMI            reduce using rule 70 (non_label_stmt -> repeat_stmt .)
    ELSE            reduce using rule 70 (non_label_stmt -> repeat_stmt .)


state 34

    (71) non_label_stmt -> while_stmt .

    SEMI            reduce using rule 71 (non_label_stmt -> while_stmt .)
    ELSE            reduce using rule 71 (non_label_stmt -> while_stmt .)


state 35

    (72) non_label_stmt -> for_stmt .

    SEMI            reduce using rule 72 (non_label_stmt -> for_stmt .)
    ELSE            reduce using rule 72 (non_label_stmt -> for_stmt .)


state 36

    (73) non_label_stmt -> case_stmt .

    SEMI            reduce using rule 73 (non_label_stmt -> case_stmt .)
    ELSE            reduce using rule 73 (non_label_stmt -> case_stmt .)


state 37

    (74) non_label_stmt -> goto_stmt .

    SEMI            reduce using rule 74 (non_label_stmt -> goto_stmt .)
    ELSE            reduce using rule 74 (non_label_stmt -> goto_stmt .)


state 38

    (75) assign_stmt -> NAME . ASSIGN expression
    (76) proc_stmt -> NAME .
    (77) proc_stmt -> NAME . LP args_list RP

    ASSIGN          shift and go to state 57
    SEMI            reduce using rule 76 (proc_stmt -> NAME .)
    ELSE            reduce using rule 76 (proc_stmt -> NAME .)
    LP              shift and go to state 58


state 39

    (78) proc_stmt -> SYS_PROC .
    (79) proc_stmt -> SYS_PROC . LP expression_list RP

    SEMI            reduce using rule 78 (proc_stmt -> SYS_PROC .)
    ELSE            reduce using rule 78 (proc_stmt -> SYS_PROC .)
    LP              shift and go to state 59


state 40

    (80) proc_stmt -> READ . LP factor RP

    LP              shift and go to state 60


state 41
